--- a/package.json
+++ b/package.json
@@ -8,19 +8,51 @@
 		"build": "parcel build src/index.html",
 		"postbuild": "cp -r src/assets/ dist/assets",
 		"start": "parcel src/index.html -p 3000 --no-cache ",
+		"test": "jest",
 		"lint": "eslint src/ --ext .ts"
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.18.6",
+		"@types/jest": "^28.1.5",
+		"@types/jsdom": "^16.2.14",
 		"@types/node": "^18.0.4",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
 		"eslint": "^8.19.0",
+		"jest-canvas-mock": "^2.4.0",
+		"jest-environment-jsdom": "^28.1.3",
 		"parcel": "^2.6.2",
 		"parcel-plugin-static-files-copy": "^2.6.0",
 		"prettier": "^2.7.1",
+		"ts-jest": "^28.0.6",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
+		"jest": "^28.1.3",
+		"jsdom": "^20.0.0",
 		"phaser": "^3.55.2"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".*\\.spec\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "jsdom",
+		"moduleNameMapper": {
+			"^src/(.*)$": "<rootDir>/$1"
+		},
+		"setupFiles": [
+			"jest-canvas-mock"
+		]
 	}
 }
