--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "parcel build src/index.html",
-		"postbuild": "cp -r src/assets/ dist/assets",
+		"postbuild": "cp -r ./assets/ ./dist/assets",
 		"start": "yarn build && parcel src/index.html -p 3000 --no-cache ",
+		"cli": "ts-node cli/ --watch",
 		"test": "jest",
 		"lint": "eslint src/ --ext .ts"
 	},
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/jest": "^28.1.5",
-		"@types/jsdom": "^16.2.14",
 		"@types/node": "^18.0.4",
+		"@types/prompt-sync": "^4.1.1",
+		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
 		"eslint": "^8.19.0",
@@ -23,14 +25,24 @@
 		"jest-environment-jsdom": "^28.1.3",
 		"parcel": "^2.6.2",
 		"parcel-plugin-static-files-copy": "^2.6.0",
+		"path-browserify": "^1.0.1",
 		"prettier": "^2.7.1",
 		"ts-jest": "^28.0.6",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
+		"@geckos.io/phaser-on-nodejs": "^1.2.7",
+		"@types/pubnub": "^7.0.0",
+		"browser-env": "^3.3.0",
+		"canvas": "^2.9.3",
+		"clear": "^0.1.0",
+		"enquirer": "^2.3.6",
+		"figlet": "^1.5.2",
 		"jest": "^28.1.3",
-		"jsdom": "^20.0.0",
-		"phaser": "^3.55.2"
+		"phaser": "^3.55.2",
+		"prompt-sync": "^4.2.0",
+		"pubnub": "^7.2.0",
+		"uuid": "^8.3.2"
 	},
 	"jest": {
 		"moduleFileExtensions": [
