--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"browser-env": "^3.3.0",
 		"canvas": "^2.9.3",
 		"clear": "^0.1.0",
+		"dotenv": "^16.0.1",
 		"enquirer": "^2.3.6",
 		"figlet": "^1.5.2",
 		"jest": "^28.1.3",
