--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "parcel build src/index.html",
 		"postbuild": "cp -r ./assets/ ./dist/assets",
-		"start": "yarn build && parcel src/index.html -p 3000 --no-cache ",
+		"start": "yarn build && parcel src/index.html --open -p 3000 --no-cache ",
 		"cli": "ts-node cli/ --watch",
 		"test": "jest",
 		"lint": "eslint src/ --ext .ts"
@@ -23,6 +23,7 @@
 		"eslint": "^8.19.0",
 		"jest-canvas-mock": "^2.4.0",
 		"jest-environment-jsdom": "^28.1.3",
+		"os-browserify": "^0.3.0",
 		"parcel": "^2.6.2",
 		"parcel-plugin-static-files-copy": "^2.6.0",
 		"path-browserify": "^1.0.1",
@@ -38,10 +39,8 @@
 		"clear": "^0.1.0",
 		"dotenv": "^16.0.1",
 		"enquirer": "^2.3.6",
-		"figlet": "^1.5.2",
 		"jest": "^28.1.3",
 		"phaser": "^3.55.2",
-		"prompt-sync": "^4.2.0",
 		"pubnub": "^7.2.0",
 		"uuid": "^8.3.2"
 	},
